django-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-container
        image: thiagolaurence/dssd-ecocycle-grupo1:v3
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

# sudo microk8s kubectl port-forward svc/django-service 8000:8000
